[gd_scene load_steps=38 format=2]

[ext_resource path="res://assets/ui/ui_1080/Stop Button.png" type="Texture" id=1]
[ext_resource path="res://script/main.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/ui_1080/Delete Button.png" type="Texture" id=3]
[ext_resource path="res://script/GridContainer.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/ui_1080/Puzzle Frame.png" type="Texture" id=5]
[ext_resource path="res://script/SpellingGridContainer.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/ui_1080/Tick Button.png" type="Texture" id=7]
[ext_resource path="res://script/KeyboardGrid.gd" type="Script" id=8]
[ext_resource path="res://script/ButtonsContainer.gd" type="Script" id=9]
[ext_resource path="res://assets/ui/ui_1080/Orange Box.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/minecraftia/Minecraftia-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/ui/ui_1080/Score Bar.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/ui_1080/Menu Button.png" type="Texture" id=13]
[ext_resource path="res://assets/puzzle_images/tomato.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/ui_1080/Box Large.png" type="Texture" id=15]
[ext_resource path="res://assets/audio/sfx/wrong_2.mp3" type="AudioStream" id=16]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 0.996078, 0.807843, 1 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 15 ) ],
"loop": true,
"name": "flash",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.713726, 0.745098, 0.129412, 0.282353 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 0.996078, 0.862745, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=14]

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.968627, 0.929412, 0.784314, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.12549, 0.109804, 0.109804, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id=16]

[sub_resource type="DynamicFont" id=17]
size = 35
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.796078, 0.219608, 0.0196078, 1 )

[sub_resource type="Theme" id=25]

[sub_resource type="DynamicFont" id=26]
size = 45
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=24]
size = 50
font_data = ExtResource( 11 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 8 )
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 12 )

[node name="Forehead" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 100.0
color = Color( 0, 0, 0, 1 )

[node name="MenuButton" type="TextureButton" parent="."]
margin_left = 920.0
margin_top = 100.0
margin_right = 1080.0
margin_bottom = 250.0
texture_normal = ExtResource( 13 )

[node name="topbarect" type="TextureRect" parent="."]
margin_top = 100.0
margin_right = 920.0
margin_bottom = 250.0
texture = ExtResource( 12 )

[node name="AllPointsLabel" type="Label" parent="topbarect"]
unique_name_in_owner = true
margin_left = 53.0
margin_top = 30.0
margin_right = 248.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "45567"
align = 1
valign = 1

[node name="Timer" type="Label" parent="topbarect"]
unique_name_in_owner = true
margin_left = 372.0
margin_top = 30.0
margin_right = 558.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "0:00"
align = 1
valign = 1

[node name="Points" type="Label" parent="topbarect"]
unique_name_in_owner = true
margin_left = 723.0
margin_top = 30.0
margin_right = 846.0
margin_bottom = 107.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "100"
align = 1
valign = 1

[node name="GameTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="MainImageContainer" type="PanelContainer" parent="."]
margin_left = 89.0
margin_top = 270.0
margin_right = 989.0
margin_bottom = 1170.0
custom_styles/panel = SubResource( 22 )

[node name="MainImage" type="TextureRect" parent="MainImageContainer"]
margin_right = 900.0
margin_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 14 )
expand = true

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 120.0
margin_top = 299.0
margin_right = 960.0
margin_bottom = 1139.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 4
script = ExtResource( 4 )

[node name="a1" type="TextureRect" parent="GridContainer"]
margin_right = 210.0
margin_bottom = 210.0
texture = ExtResource( 10 )

[node name="a2" type="TextureRect" parent="GridContainer"]
margin_left = 210.0
margin_right = 420.0
margin_bottom = 210.0
texture = ExtResource( 10 )

[node name="a3" type="TextureRect" parent="GridContainer"]
margin_left = 420.0
margin_right = 630.0
margin_bottom = 210.0
texture = ExtResource( 10 )

[node name="a4" type="TextureRect" parent="GridContainer"]
margin_left = 630.0
margin_right = 840.0
margin_bottom = 210.0
texture = ExtResource( 10 )

[node name="b1" type="TextureRect" parent="GridContainer"]
margin_top = 210.0
margin_right = 210.0
margin_bottom = 420.0
texture = ExtResource( 10 )

[node name="b2" type="TextureRect" parent="GridContainer"]
margin_left = 210.0
margin_top = 210.0
margin_right = 420.0
margin_bottom = 420.0
texture = ExtResource( 10 )

[node name="b3" type="TextureRect" parent="GridContainer"]
margin_left = 420.0
margin_top = 210.0
margin_right = 630.0
margin_bottom = 420.0
texture = ExtResource( 10 )

[node name="b4" type="TextureRect" parent="GridContainer"]
margin_left = 630.0
margin_top = 210.0
margin_right = 840.0
margin_bottom = 420.0
texture = ExtResource( 10 )

[node name="c1" type="TextureRect" parent="GridContainer"]
margin_top = 420.0
margin_right = 210.0
margin_bottom = 630.0
texture = ExtResource( 10 )

[node name="c2" type="TextureRect" parent="GridContainer"]
margin_left = 210.0
margin_top = 420.0
margin_right = 420.0
margin_bottom = 630.0
texture = ExtResource( 10 )

[node name="c3" type="TextureRect" parent="GridContainer"]
margin_left = 420.0
margin_top = 420.0
margin_right = 630.0
margin_bottom = 630.0
texture = ExtResource( 10 )

[node name="c4" type="TextureRect" parent="GridContainer"]
margin_left = 630.0
margin_top = 420.0
margin_right = 840.0
margin_bottom = 630.0
texture = ExtResource( 10 )

[node name="d1" type="TextureRect" parent="GridContainer"]
margin_top = 630.0
margin_right = 210.0
margin_bottom = 840.0
texture = ExtResource( 10 )

[node name="d2" type="TextureRect" parent="GridContainer"]
margin_left = 210.0
margin_top = 630.0
margin_right = 420.0
margin_bottom = 840.0
texture = ExtResource( 10 )

[node name="d3" type="TextureRect" parent="GridContainer"]
margin_left = 420.0
margin_top = 630.0
margin_right = 630.0
margin_bottom = 840.0
texture = ExtResource( 10 )

[node name="d4" type="TextureRect" parent="GridContainer"]
margin_left = 630.0
margin_top = 630.0
margin_right = 840.0
margin_bottom = 840.0
texture = ExtResource( 10 )

[node name="FrameContainer" type="PanelContainer" parent="."]
margin_left = 89.0
margin_top = 270.0
margin_right = 989.0
margin_bottom = 1170.0
custom_styles/panel = SubResource( 20 )

[node name="PuzzleFrame" type="TextureRect" parent="FrameContainer"]
margin_right = 900.0
margin_bottom = 900.0
texture = ExtResource( 5 )
expand = true

[node name="ButtonContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.0
margin_top = 401.0
margin_right = 147.0
margin_bottom = 691.0
custom_styles/panel = SubResource( 1 )

[node name="StopButton" type="TextureButton" parent="ButtonContainer"]
margin_right = 290.0
margin_bottom = 290.0
texture_normal = ExtResource( 1 )

[node name="StopBtnAnimation" type="AnimatedSprite" parent="ButtonContainer/StopButton"]
unique_name_in_owner = true
visible = false
position = Vector2( 149, 137 )
scale = Vector2( 2, 2 )
frames = SubResource( 27 )
animation = "flash"
frame = 1

[node name="SpellingGridContainer" type="PanelContainer" parent="."]
margin_left = 540.0
margin_top = 1204.0
margin_right = 540.0
margin_bottom = 1204.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 71, 78 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 6 )

[node name="SpellingGrid" type="GridContainer" parent="SpellingGridContainer"]
grow_horizontal = 2
rect_pivot_offset = Vector2( 25, 25 )
columns = 10

[node name="KeyboardContainer" type="PanelContainer" parent="."]
margin_left = 153.0
margin_top = 1370.0
margin_right = 923.0
margin_bottom = 1670.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 23 )

[node name="KeyboardGrid" type="GridContainer" parent="KeyboardContainer"]
margin_right = 770.0
margin_bottom = 300.0
custom_constants/vseparation = 0
custom_constants/hseparation = 5
columns = 5
script = ExtResource( 8 )

[node name="ButtonsContainer" type="PanelContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 101.0
margin_top = -162.0
margin_right = 981.0
margin_bottom = -32.0
rect_pivot_offset = Vector2( 0, 150 )
custom_styles/panel = SubResource( 13 )
script = ExtResource( 9 )

[node name="GridContainer" type="GridContainer" parent="ButtonsContainer"]
margin_right = 880.0
margin_bottom = 130.0
theme = SubResource( 14 )
custom_constants/hseparation = 20
columns = 2

[node name="DeleteButton" type="TextureButton" parent="ButtonsContainer/GridContainer"]
margin_right = 430.0
margin_bottom = 130.0
texture_normal = ExtResource( 3 )

[node name="SubmitButton" type="TextureButton" parent="ButtonsContainer/GridContainer"]
margin_left = 450.0
margin_right = 880.0
margin_bottom = 130.0
texture_normal = ExtResource( 7 )

[node name="PopupPanel" type="PopupPanel" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -470.0
margin_top = -253.0
margin_right = 476.0
margin_bottom = 270.0
mouse_filter = 2
custom_styles/panel = SubResource( 19 )

[node name="Control" type="Control" parent="PopupPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 942.0
margin_bottom = 519.0
mouse_filter = 2

[node name="QuitBtn" type="Button" parent="PopupPanel/Control"]
pause_mode = 2
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -80.5
margin_right = 156.0
margin_bottom = 80.5
theme = SubResource( 16 )
custom_fonts/font = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
text = "QUIT"

[node name="Label" type="Label" parent="PopupPanel/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -309.0
margin_top = 101.5
margin_right = 341.0
margin_bottom = 230.5
theme = SubResource( 25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 26 )
text = "The score for this word
will not be recorded"
align = 1

[node name="FlashTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="DebugHeight" type="Label" parent="."]
visible = false
margin_left = 60.0
margin_top = 15.0
margin_right = 212.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 24 )
text = "1234"

[node name="CorrectWord" type="AudioStreamPlayer" parent="."]

[node name="IncorrectSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 16 )

[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="button_down" from="ButtonContainer/StopButton" to="GridContainer" method="_on_TextureButton_button_down"]
[connection signal="pressed" from="ButtonsContainer/GridContainer/DeleteButton" to="ButtonsContainer" method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/GridContainer/SubmitButton" to="ButtonsContainer" method="_on_SubmitButton_pressed"]
[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="pressed" from="PopupPanel/Control/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="finished" from="CorrectWord" to="." method="_on_CorrectWord_finished"]
